--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"html-webpack-plugin": "^5.5.0",
 		"sass": "^1.52.3",
 		"sass-loader": "^13.0.0",
+		"style-loader": "^3.3.1",
 		"svg-sprite-loader": "^6.0.11",
 		"webpack": "^5.73.0",
 		"webpack-cli": "^4.10.0",
